clean up and add students to index

--- a/index.html
+++ b/index.html
@@ -9,13 +9,109 @@
   <div class="wrapper">
     <section id="students">
 
-      <!-- instructor should add in links for all enrolled students here -->
+      <div class="student">
+        <a href="students/leila-valanejad.html">
+          <img src="images/leila-valanejad.jpg" alt="Leila Valanejad">
+        </a>
+        <a href="students/leila-valanejad.html">Leila Valanejad</a>
+      </div>
 
       <div class="student">
-        <a href="students/hannah-nordgren.html">
-          <img src="images/hannah-nordgren.jpg" alt="Hannah Nordgren">
+        <a href="students/dylan-mccurrach.html">
+          <img src="images/dylan-mccurrach.jpg" alt="Dylan McCurrach">
         </a>
-        <a href="students/hannah-nordgren.html">Hannah Nordgren</a>
+        <a href="students/dylan-mccurrach.html">Dylan McCurrach</a>
+      </div>
+
+      <div class="student">
+        <a href="students/nina-khachiyan.html">
+          <img src="images/nina-khachiyan.jpg" alt="Nina Khachiyan">
+        </a>
+        <a href="students/nina-khachiyan.html">Nina Khachiyan</a>
+      </div>
+
+      <div class="student">
+        <a href="students/tamara-fultz.html">
+          <img src="images/tamara-fultz.jpg" alt="Tamara Fultz">
+        </a>
+        <a href="students/tamara-fultz.html">Tamara Fultz</a>
+      </div>
+
+      <div class="student">
+        <a href="students/caleigh-forbes.html">
+          <img src="images/caleigh-forbes.jpg" alt="Caleigh Forbes">
+        </a>
+        <a href="students/caleigh-forbes.html">Caleigh Forbes</a>
+      </div>
+
+      <div class="student">
+        <a href="students/rohan-manthani.html">
+          <img src="images/rohan-manthani.jpg" alt="Rohan Manthani">
+        </a>
+        <a href="students/rohan-manthani.html">Rohan Manthani</a>
+      </div>
+
+      <div class="student">
+        <a href="students/kurtley-smith.html">
+          <img src="images/kurtley-smith.jpg" alt="Kurtley Smith">
+        </a>
+        <a href="students/kurtley-smith.html">Kurtley Smith</a>
+      </div>
+
+      <div class="student">
+        <a href="students/joelle-fernandez.html">
+          <img src="images/joelle-fernandez.jpg" alt="Joelle Fernandez">
+        </a>
+        <a href="students/joelle-fernandez.html">Joelle Fernandez</a>
+      </div>
+
+      <div class="student">
+        <a href="students/bhavik-patel.html">
+          <img src="images/bhavik-patel.jpg" alt="Bhavik Patel">
+        </a>
+        <a href="students/bhavik-patel.html">Bhavik Patel</a>
+      </div>
+
+      <div class="student">
+        <a href="students/yauheniya-shalai.html">
+          <img src="images/yauheniya-shalai.jpg" alt="Yauheniya Shalai">
+        </a>
+        <a href="students/yauheniya-shalai.html">Yauheniya Shalai</a>
+      </div>
+
+      <div class="student">
+        <a href="students/charlotte-lysohir.html">
+          <img src="images/charlotte-lysohir.jpg" alt="Charlotte Lysohir">
+        </a>
+        <a href="students/charlotte-lysohir.html">Charlotte Lysohir</a>
+      </div>
+
+      <div class="student">
+        <a href="students/david-bohl.html">
+          <img src="images/david-bohl.jpg" alt="David Bohl">
+        </a>
+        <a href="students/david-bohl.html">David Bohl</a>
+      </div>
+
+      <div class="student">
+        <a href="students/juan-field.html">
+          <img src="images/juan-field.jpg" alt="Juan Field">
+        </a>
+        <a href="students/juan-field.html">Juan Field</a>
+      </div>
+
+      <div class="student">
+        <a href="students/hannah-spencer.html">
+          <img src="images/hannah-spencer.jpg" alt="Hannah Spencer">
+        </a>
+        <a href="students/hannah-spencer.html">Hannah Spencer</a>
+      </div>
+
+      <div class="student">
+        <a href="students/robert-lum.html">
+          <img src="images/robert-lum.jpg" alt="Robert Lum">
+        </a>
+        <a href="students/robert-lum.html">Robert Lum</a>
       </div>
 
       <div class="student">
