added personal info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <section id="students">
 
       <!-- instructor should add in links for all enrolled students here -->
+      <div class="student">
+        <a href="students/bhavik-patel.html">
+          <img src="images/bhavik-patel.png" alt="Bhavik Patel">
+        </a>
+        <a href="students/bhavik-patel.html">Bhavik Patel</a>
+      </div>
 
       <div class="student">
         <a href="students/hannah-nordgren.html">
