add new student Jenny Shalai

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
         </a>
         <a href="students/jonathan-grover.html">Jonathan Grover</a>
       </div>
+      
+       <div class="student">
+        <a href="students/jenny-shalai.html">
+          <img src="images/jenny-shalai.jpg" alt="Jenny Shalai">
+        </a>
+        <a href="students/enny-shalai.html">Jenny Shalai</a>
+      </div>
 
     </section>
   </div>
