update nine image name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="student">
         <a href="students/nina-khachiyan.html">
-          <img src="images/nina-khachiyan.jpg" alt="Nina Khachiyan">
+          <img src="images/nina-khachiyan.png" alt="Nina Khachiyan">
         </a>
         <a href="students/nina-khachiyan.html">Nina Khachiyan</a>
       </div>
@@ -76,7 +76,7 @@
         <a href="students/jenny-shalai.html">
           <img src="images/jenny-shalai.jpg" alt="Jenny Shalai">
         </a>
-        <a href="students/enny-shalai.html">Jenny Shalai</a>
+        <a href="students/jenny-shalai.html">Jenny Shalai</a>
       </div>
 
       <div class="student">
