change relink jaun_carlos image

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <div class="student">
         <a href="students/juan-field.html">
-          <img src="images/juan-field.jpg" alt="Juan Field">
+          <img src="images/juan_carlos.jpg" alt="Juan Field">
         </a>
         <a href="students/juan-field.html">Juan Field</a>
       </div>
