update image link

--- a/students/dylan-mccurrach.html
+++ b/students/dylan-mccurrach.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   
-  <img src="images/dylan-mccurrach.jpg" alt="Dylan McCurrach">
+  <img src="../images/dylan-mccurrach.jpg" alt="Dylan McCurrach">
 
   <h1>Dylan McCurrach</h1>
 
