--- a/students/rohan-manthani.html
+++ b/students/rohan-manthani.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rohan Manthani</title>
+  <link rel="stylesheet" type="text/css" href="/css/rohan-style.css">
 </head>
 <body>
   <img src="../images/rohan-manthani.jpg">
