add css file for student Jenny-Shalai

--- a/students/jenny-shalai.html
+++ b/students/jenny-shalai.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="../css/jenny-shalai.css">
   <meta charset="UTF-8">
   <title>Jenny Shalai</title>
 </head>
@@ -9,11 +10,11 @@
   <img src="../images/jenny-shalai.jpg" alt="Jenny Shalai">
 
   <h1>Jenny Shalai</h1>
-  <h2>Instructor, Artist, Programmer</h2>
+  <h2>Lorem ipsum dolor sit amet</h2>
 
-  <p>Jenny received a BFA in Graphic Design from the University of Akron, and was awarded an MFA in Design & Technology from the San Francisco Art Institute. He has worked nationally as a designer and developer. To date, he has taught programming to hundreds of students and held instructing positions at the San Francisco Art Institute, Pittsburgh Art Institute, and alternative learning spaces: 3rd Ward, and General Assembly. He has been published in Creative Quarterly, noted by The San Francisco Chronicle, and received media attention from NBC for his interactive artwork. As an avid maker, his artwork blends programming, custom electronics, and sculptural materials.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce rutrum sodales ex, id commodo lacus mattis et. Ut laoreet convallis risus, eu vehicula libero scelerisque sed. Integer interdum ex et nisi ullamcorper tincidunt. Duis sit amet elit sem. Aenean nec nunc ligula. Donec porttitor id turpis a porta. Curabitur magna eros, porta sit amet congue facilisis, fermentum ac augue. In et quam dictum, vulputate neque id, tristique tortor.</p>
 
-  <p>Jenny currently resides in NYC teaching at the Flatiron School, creating tech-art, and working as a freelance developer.</p>
+  <p>Proin nibh odio, sagittis vitae viverra eget, maximus a sem. Quisque purus velit, interdum in iaculis pretium, consectetur hendrerit elit. Vestibulum pulvinar luctus erat at finibus. Morbi facilisis eu ante a semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse congue nibh purus, quis lobortis elit ultrices euismod. Aliquam auctor bibendum purus pretium interdum. Sed magna neque, pharetra ut posuere id, gravida nec lectus.</p>
 
   
   <a href="https://github.com/JennyShalai">Follow on Github</a>
