new formatting of student page

--- a/students/david-bohl.html
+++ b/students/david-bohl.html
@@ -5,22 +5,49 @@
 	<meta charset="UTF-8">
 	<title>David Bohl</title>
 </head>
-	<!-- <body background="../images/backgrounds/jp-6.jpg" text="#ff9955"> -->
 
 	<body>
+	
+		<!-- Header -->
+	<div id="header">
+		<h1>David Bohl</h1>
+	</div>
 	<!--
-	<img src="../images/david-bohl.jpg" alt="David Bohl">
-	<h1>David Bohl</h1>
+	<div class="main">
+		
+	</div>
 	-->
-	<p id="bio">
-		David is currently working on a Computer Science degree at Hunter College, and is taking a break to learn front-end web dev.  He also has a background in electronic music and music technology.
-	</p>
 
+
+
+
+	<!-- Picture -->
+	<div id="picture">
+		
+		<img src="../images/david-bohl.jpg" alt="David Bohl" height="300">
+		
+	</div>
 	
 
 
+
+	<div id="red"></div>
+
+	<div id="orange"></div>
+
+	<div id="yellow"></div>
+
+		
+	<div id="bio">
+		<p id="bio">
+			David grew up in the Philadelphia area, and earned a BS in Photography from Drexel University.  He's currently working on a Computer Science degree at Hunter College, and is taking a break to learn front-end web development.  He also has a background in music and music technology, and produces electronic dance music.  
+		</p>
+	</div>	
+	 
+
+	
 	<!-- Social Media Icons -->
-	<div>
+	<div id="icons">
 		<a href="https://github.com/David-Bohl/" target="_blank">
 		<img title="GitHub" alt="GitHub" src="../images/social-media-icons/github-icon.jpg" width="35" height="35" />
 		</a>
