add style to my page

--- a/students/tamara-fultz.html
+++ b/students/tamara-fultz.html
@@ -1,20 +1,41 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Tamara Fultz</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../tamara-fultz.css">
 </head>
+
 <body>
 
-  <img src="../images/tamara-fultz.jpg" alt="Tamara Fultz">
+  <figure>
+    <img src="../images/tamara-fultz.jpg" alt="Photograph of Tamara Fultz">
+    <figcaption>Waiting for the F-train. Photo by Vivian Darkbloom.</figcaption>
+  </figure>
 
-  <h1>Tamara Fultz</h1>
-  <h2>Museum Librarian, Web Developer</h2>
+  <header>
 
-  <p>Tamara  received her B.A. in classical languages at Penn State and did graduate work in information studies (Drexel University) and art history (Hunter College, CUNY Graduate Center). She has worked as a museum librarian at the Metropolitan Museum of Art for 15 years. Every fall semester she teaches an online metadata class at Rutgers University. She currently resides in Carroll Gardens, Brooklyn.</p>
+    <h1>Tamara Fultz</h1>
+    <h2>Museum Librarian, Web Developer</h2>
 
-  <a href="https://twitter.com/Gorgonster">Follow @Gorgonster on Twitter</a><br>
-  <a href="https://github.com/TamFultz">Follow on Github</a>
+  </header>
+
+  <div id="bio">
+
+    <p>Tamara  received her B.A. in classical languages (<a href="http://www.psu.edu/">Penn State</a>) and did graduate work in information studies (<a href="http://drexel.edu/">Drexel University</a>) and art history (<a href="http://www.hunter.cuny.edu/main/">Hunter College</a>, <a href="http://www.gc.cuny.edu/Home">CUNY Graduate Center</a>). She has worked as a museum librarian at the <a href="http://www.metmuseum.org/">Metropolitan Museum of Art</a> for 15 years. Every fall semester she teaches an online metadata class at <a href="http://www.rutgers.edu/">Rutgers University</a>. She currently resides in Carroll Gardens, Brooklyn.</p>
+
+  </div>
+
+  <footer>
+
+    <a href="https://twitter.com/Gorgonster">Follow @Gorgonster on Twitter</a><br>
+    <a href="https://github.com/TamFultz">Follow on Github</a>
+
+  </footer>
 
 </body>
+
 </html>
