bio page css style

--- a/students/kurtley-smith.html
+++ b/students/kurtley-smith.html
@@ -3,17 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Kurtley Smith</title>
+  <link rel="stylesheet" href="../css/kurtley-smith.css">
 </head>
 <body>
-
-  <img src="../images/kurtley-smith.jpg">
-
+<h1>Kurtley Smith</h1>
   
-  <h1>Kurtley Smith</h1>
+  <img class="animated fadeInDown" src="../images/kurtley-smith.jpg">
+  <figcaption>*This was taken from a recent trip to Thailand. It was my first time there and I had a blast.*</figcaption>
   
 
-  <p>Kurtley was born and raise in Brooklyn and attended SUNY University at Buffalo for a degree in Business. He's a huge music, movies and martial arts fan and enjoys a good meal. In his free time, he writes poetry, practices yoga, and stays active in the gym. He currently works for Ecommerce/Logistics company Pitney Bowes as a Tranportation Coordinator. He is looking for a career change and decided to take a leap with Front End Development. 
+  <p>Kurtley was born and raised in Brooklyn and attended SUNY University at Buffalo for a degree in Business. He began studying Ninjitsu at the age of 13 and had an opporunity to train in Japan with his Grandmaster but chose College instead. He's a huge music, movies and martial arts fan and enjoys all of the food NYC has to offer.</p>
+
+  <p>In his free time, he writes poetry, practices yoga, reads, and stays active in the gym. He currently works for Ecommerce/Logistics company Pitney Bowes, as a Tranportation Coordinator. He is looking for a career change and decided to take a leap with Front End Development. 
   </p>
+
+<section id="details">
+  <div>
+  <h3>Contact</h3>
+  <p>
+  email: <a href="KurtleySmith@gmail.com">KurtleySmith@gmail.com</a><br>
+  phone: 1 646 441 0123
+  </p>
+  </div>
+  </section>
 
 
 
