add basic style to bio page

--- a/students/caleigh-forbes.html
+++ b/students/caleigh-forbes.html
@@ -1,18 +1,27 @@
 <!doctype html>
 
+<html lang="en">
 <head>
-
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="../css/caleigh-forbes.css">
+  <title>Caleigh Forbes</title>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
-
 
 <body>
 
 <h1>Caleigh Forbes</h1>
 
-<img src="../images/caleigh-forbes.jpg" alt="Caleigh Forbes" width="331.33" height="438.66">
+<figure>
+  <img src="../images/caleigh-forbes.jpg" alt="Caleigh Forbes" width="331.33" height="438.66">
+  <figcaption>as happy as a kid in a ball pit</figcaption>
+</figure>
 
-<p>
-Caleigh received her BA and MA in Architectural History before moving to New York to work at The Skyscraper Museum. After learning all there is to know about tall buildings, Caleigh took a position at the architecture firm Christoff:Finio Architecture.
-</p>
+<div>
+  <p>
+  Caleigh received her BA and MA in Architectural History before moving to New York to work at The Skyscraper Museum. After learning all there is to know about tall buildings, Caleigh took a position at the architecture firm Christoff:Finio Architecture.
+  </p>
+</div>
 
 </body>
