--- a/students/tamara-fultz.html
+++ b/students/tamara-fultz.html
@@ -6,7 +6,7 @@
   <title>Tamara Fultz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../tamara-fultz.css">
+  <link rel="stylesheet" type="text/css" href="../css/tamara-fultz.css">
 </head>
 
 <body>
