--- a/students/hannah-spencer.html
+++ b/students/hannah-spencer.html
@@ -1,15 +1,25 @@
 <!doctype html>
-<html lang="english">
+<html lang="en">
 <head>
-  <font face="arial">
 <title> Hannah Spencer </title>
+<link rel="stylesheet" href="../css/hannah-spencer.css">
 </head>
   <body>
-  <h1><bold> Hannah Spencer </h1></bold>
-  <img src ="../images/hannah-spencer.jpg" alt="Hannah Spencer" title= "Hannah Spencer" height="400">
-<p> Hannah Spencer was raised in the pacific northwest where she was influenced by the trees + water, vibrant music scene and fresh seafood.  She decided to move to Brooklyn last April after placing a bet with her dodgeball teammate (beer may have played a factor). But if Hannah shakes on something, she'll never back down on her promise. She currently spends most of her time on Indesign and Photoshop working as a print designer for west elm. She has a extensive list of New York resturants and bars that she is making her way through, but it keeps getting longer. Hannah will never turn down a concert invite or a chocolate doughnut.
-</p>
+  
+  <div class="wrapper">
+    <h1> HANNAH SPENCER </h1>
+  </div>
+  
+  <div id="ice-cream">
+    <img class="img-circle" src ="../images/hannah-spencer.jpg" alt="Hannah Spencer" title= "Hannah Spencer" height="400" border="15">
+  </div>  
+  <div id="content">
+  <p> Hannah Spencer was raised in the pacific northwest where she was influenced by the trees + water, vibrant music scene and fresh seafood.  She decided to move to Brooklyn last April after placing a bet with her dodgeball teammate (beer may have played a factor). But if Hannah shakes on something, she'll never back down on her promise. She currently spends most of her time on Indesign and Photoshop working as a print designer for west elm. She has a extensive list of New York resturants and bars that she is making her way through, but it keeps getting longer. Hannah will never turn down a concert invite or a chocolate doughnut.
+  </p>
+  </div>
 <br>
-<a href="http://i.imgur.com/NikWcYQ.gif">Hannah's Twitter</a>
-  </body>
-    </font>
+  <div>
+  <a href="http://i.imgur.com/NikWcYQ.gif">Hannah's Twitter</a>
+  </div>
+</body>
+</html>
