css for student directory

--- a/students/leila-valanejad.html
+++ b/students/leila-valanejad.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Leila</title>
+  <link rel="stylesheet" href="../css/leila-valanejad.css"> 
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
