--- a/students/joelle-fernandez.html
+++ b/students/joelle-fernandez.html
@@ -3,21 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <title>Joelle Fernandez</title>
+  <link rel="stylesheet" type="text/css" href="../css/joelle-fernandez.css">
 </head>
+
 <body>
 
-  <img src="../images/joelle-fernandez.jpg" alt="Joelle Fernandez">
+  <!--/////////// Social Bar //////////-->
+  <div id="social">
+    <a class="fbook" href="http://www.facebook.com/joellepfernandez" target="_blank" title="facebook">Facebook</a>
+    <a class="twitter" href="http://www.twitter.com/jpfernandez45" target="_blank" title="twitter">Twitter</a>
+    <a class="linkedin" href="http://www.linkedin.com/joellepfernandez" target="_blank" title="linkedIn">LinkedIn</a>
+  </div>
+  <!--/////////// Ends Social Bar //////////-->
 
-  <h1>Joelle Fernandez</h1>
-  <h2>Teacher, Photographer</h2>
+  <!--/////////// Header //////////-->
+  <header>
 
-  <p>Joelle received a Bachelors of Arts in History with a minor in Holistic Health and Special Education from the San Francisco State University (SFSU), received a certificate in Holistic Health from SFSU, and was awarded a Master of Science in Teaching: General Education and Special Education (Grades 1-9) from the Pace University. </p>
+    <!--/////////// Logo Panel //////////-->
+    <div id="logo" class="shadow">
+        <h1>Joelle Fernandez</h1>    
+        <h2>Teacher, Photographer</h2>
+    </div>
+    <!--/////////// Ends Logo Panel //////////-->
 
-  <p>She has worked as a public school special educator in New York City for five years. </p>
-  <p>Joelle is interested in delving deeper into the programming world.</p>
+  <!--/////////// Nav Bar //////////-->
+  <ul id="nav">
+    <li><a href="../students/joelle-fernandez.html">About</a></li>
+    <li><a href="http://www.jpfernandez.com">Photography</a></li>
+  </ul>
+</div>
 
-  <a href="http://twitter.com/jpfernandez45">Follow @jpfernandez45 on Twitter</a><br>
-  <a href="https://github.com/joellepfernandez">Follow on Github</a>
+  <!--/////////// Ends Nav Bar //////////-->
+  </header>
+  <!--/////////// Ends Header //////////-->
+  
+<section id="bio">
+  <div class="wrapper clearfix">
+      <div class="col-1">
+      <figure>
+        <img src="../images/joelle-fernandez.jpg" alt="Joelle Fernandez Profile">
+      </figure>
+      </div>
+ 
+    <div class="col-2">
+       <p>Joelle received a Bachelors of Arts in History with a minor in Holistic Health and Special Education from the San Francisco State University (SFSU), received a certificate in Holistic Health from SFSU, and was awarded a Master of Science in Teaching: General Education and Special Education (Grades 1-9) from the Pace University.</p>
 
+        <p>She has worked as a public school special educator in New York City for five years. </p>
+        <p>Joelle is interested in delving deeper into the programming world.</p>
+    </div>
+  </div><!-- .wrapper -->
+  </section>
+
+<!--/////////// Footer //////////-->
+<footer>
+   &copy; 2016 Joelle Fernandez. All Rights Reserved.
+</footer>
+<!--/////////// End Footer //////////-->
 </body>
 </html>
