add column structure and positioning

--- a/students/dylan-mccurrach.html
+++ b/students/dylan-mccurrach.html
@@ -12,7 +12,9 @@
   <div class="box1">
     <h1 class="text1">Dylan McCurrach</h1>
 
-      <p class="text2">Dylan McCurrach received a BA in Economics and Philosophy from Cornell University. He has worked for UBS Wealth Management, the Cornell University Endowment and the Andrew W. Mellon Foundation. He is a CFA Charterholder and a member of the New York Society of Security Analysts. He recently started taking a front-end web development course at the Flatiron School to expand his skill set and purse his interest in coding.</p>
+      <p class="text2">Dylan received a BA in Economics and Philosophy from Cornell University. He has worked for UBS Wealth Management, the Cornell University Endowment and the Andrew W. Mellon Foundation. He is a CFA Charterholder and a member of the New York Society of Security Analysts.</p>
+
+      <p class="text2">Dylan recently started taking a front-end web development course at the Flatiron School to expand his skill set and purse his interest in coding.</p>
 </div>
 
 </body>
