add responsive layout

--- a/students/jenny-shalai.html
+++ b/students/jenny-shalai.html
@@ -11,7 +11,7 @@
   <div id="logo" class="col-1 first">
     <img src="../images/jenny-shalai.jpg" alt="Jenny Shalai">
   </div>
-  <div class="description col-1">  
+  <div class="description">  
     <h1>Jenny Shalai</h1>
     <h2>Lorem ipsum dolor sit amet</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut laoreet convallis risus, eu vehicula libero scelerisque sed. Integer interdum ex et nisi ullamcorper tincidunt.</p>
