add an omitted word

--- a/students/tamara-fultz.html
+++ b/students/tamara-fultz.html
@@ -6,15 +6,10 @@
   <title>Tamara Fultz</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../tamara-fultz.css">
+  <link rel="stylesheet" type="text/css" href="../css/tamara-fultz.css">
 </head>
 
 <body>
-
-  <figure>
-    <img src="../images/tamara-fultz.jpg" alt="Photograph of Tamara Fultz">
-    <figcaption>Waiting for the F-train. Photo by Vivian Darkbloom.</figcaption>
-  </figure>
 
   <header>
 
@@ -23,9 +18,24 @@
 
   </header>
 
+  <div id="photo">
+
+    <figure>
+      <img src="../images/tamara-fultz.jpg" alt="Photograph of Tamara Fultz">
+      <figcaption>Waiting for the F-train. Photo by Vivian Darkbloom.</figcaption>
+    </figure>
+
+  </div>
+
   <div id="bio">
 
     <p>Tamara  received her B.A. in classical languages (<a href="http://www.psu.edu/">Penn State</a>) and did graduate work in information studies (<a href="http://drexel.edu/">Drexel University</a>) and art history (<a href="http://www.hunter.cuny.edu/main/">Hunter College</a>, <a href="http://www.gc.cuny.edu/Home">CUNY Graduate Center</a>). She has worked as a museum librarian at the <a href="http://www.metmuseum.org/">Metropolitan Museum of Art</a> for 15 years. Every fall semester she teaches an online metadata class at <a href="http://www.rutgers.edu/">Rutgers University</a>. She currently resides in Carroll Gardens, Brooklyn.</p>
+
+  </div>
+
+  <div id="hobbies">
+
+    <p>I am an avid reader with extremely eclectic tastes from reading histories of WW1 to feminist authors, such as Terry Castle, to sci fi such as The Expanse series, to detective novels by Elizabeth George. I suppose you could call my cats, Diego and Leon, a "hobby", since they are certainly a time suck. I love tooling around learning stuff like XML, Python, and Ruby.</p> 
 
   </div>
 
