add responsive design

--- a/students/david-bohl.html
+++ b/students/david-bohl.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="../css/david-bohl.css">
@@ -10,20 +10,27 @@
 	<div class="wrapper">
 
 		<!-- Header -->
-		<div id="header">
-			<h1>David Bohl</h1>
+		<div class="header-wrapper">
+			<div class="colorbar" id="blue"></div>
+			<div class="name-container">
+				<h1>David Bohl</h1>
+			</div>
 		</div>
-
-		<div id="bio">
-			<p>
-				David grew up in the Philadelphia area, and earned a BS in Photography from Drexel University.  He's currently working on a Computer Science degree at Hunter College, and is taking a break to learn front-end web development.  He also has a background in music and music technology, and produces electronic dance music.  
-			</p>
-		</div>	
 
 		<!-- Picture -->
 		<div id="picture">	
 			<img src="../images/david-bohl.jpg" alt="David Bohl" >
 		</div>
+
+
+		<div id="bio-box">
+
+			<p id="bio-content">
+				David grew up in the Philadelphia area, and earned a BS in Photography from Drexel University.  He's currently working on a Computer Science degree at Hunter College, and is taking a break to learn front-end web development.  He also has a background in music and music technology, and produces electronic dance music.  
+			</p>
+		</div>	
+
+
 		
 		<div class="colorbar" id="red"></div>
 		<div class="colorbar" id="orange"></div>
